--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.1.3 - 2021-05-23  lxvs
+
+	* cloud-remove: remove empty folders created by cloud-deploy.
+
 1.1.2 - 2021-05-23  lxvs
 
 	* fix an issue that entering nothing when ask for overwrite causes
