--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+1.1.4 - 2021-05-23  lxvs
+
+	* fix the wrong path of savedgames
+
 1.1.3 - 2021-05-23  lxvs
 
 	* cloud-remove: remove empty folders created by cloud-deploy.
